# based

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  SAMPLE.cpp  TODO.md  TODO.txt
.cursor/rules/: c-conventions.mdc  clang-tidy.mdc  project.mdc  tests.mdc
.github/workflows/: build-and-test.yml
cmake/: fetch_efsw.cmake  fetch_googletest.cmake  fetch_libmath2.cmake  fetch_miniz.cmake  fetch_olib.cmake  fetch_tracy.cmake
core/: AGENTS.md  CMakeLists.txt  api_index.txt
core/include/: based_core.h
core/include/basic/: assert.h  codespace.h  entry.h  entry_impl.h  primitive_types.h  profiler.h  utility_defines.h
core/include/containers/: binary_tree.h  bitset.h  doubly_list.h  hash_map.h  ring_list.h  singly_list.h  stack_list.h  tree.h
core/include/context/: ctx.h
core/include/filesystem/: archive.h  file.h  filemap.h  filestream.h  pathwatch.h
core/include/input/: audio_device.h  camera.h  clipboard.h  devices.h  gamepads.h  input_state.h  keyboard.h  mouse.h  msg.h  msg_core.h  sensor.h  tablet.h  touch.h  vkeys.h
core/include/interface/: cursor.h  icon.h  monitor.h  text_input.h  window.h
core/include/memory/: allocator.h  arena.h  heap.h  memops.h  scratch.h
core/include/processes/: pipe.h
core/include/strings/: cstrings.h
core/include/system/: hardware_info.h  system_runtime.h
core/include/threads/: thread.h  thread_group.h
core/include/utils/: compress.h  huffman.h  log_state.h  stacktrace.h
core/include/windowing/: window.h
core/src/: internal.h  platform_includes.h  sdl3_include.h
core/src/basic/: assert.c  entry.c  intrinsics.c
core/src/containers/: hash_map.c  sort.c
core/src/context/: ctx.c  global_ctx.c  thread_ctx.c
core/src/filesystem/: archive.c  directory.c  file.c  filemap.c  filestream.c  module.c  path.c  pathinfo.c  pathwatch.c
core/src/input/: audio_device.c  bindings.c  camera.c  capture.c  clipboard.c  devices.c  gamepads.c  input_state.c  joystick.c  keyboard.c  mouse.c  msg.c  msg_core.c  sensor.c  tablet.c  touch.c
core/src/interface/: cursor.c  dialog.c  dpi.c  icon.c  monitor.c  text_input.c  window.c
core/src/memory/: allocator.c  arena.c  buffer.c  heap.c  memops.c  pool.c  ring.c  scratch.c  vmem.c
core/src/processes/: common_processes.c  pipe.c  process.c  process_current.c
core/src/strings/: char.c  cstrings.c  strings.c  unicode.c
core/src/system/: cpu_info.c  system_info.c  system_runtime.c
core/src/threads/: atomics.c  condvar.c  mutex.c  rwlock.c  semaphore.c  spinlock.c  thread.c  thread_current.c  thread_group.c
core/src/utils/: cmdline.c  compress.c  crc.c  endian.c  id.c  log_state.c  random_series.c  stacktrace.c  timer.c  timestamp.c  uuid.c  version.c
core/src/windowing/: dialog.c  monitor.c  window.c
core/tests/: test_common.hpp
core/tests/containers/: binary_tree_test.cpp  hash_map_test.cpp  tree_test.cpp
core/tests/context/: ctx_test.cpp  global_ctx_test.cpp
core/tests/filesystem/: archive_test.cpp  directory_test.cpp  file_test.cpp  filestream_test.cpp
core/tests/input/: camera_test.cpp  devices_test.cpp  gamepads_test.cpp  input_state_test.cpp  joystick_test.cpp  keyboard_test.cpp  mouse_test.cpp  msg_core_test.cpp  sensor_test.cpp  tablet_test.cpp  touch_test.cpp
core/tests/interface/: cursor_test.cpp  monitor_test.cpp  window_test.cpp
core/tests/memory/: allocator_test.cpp  arena_test.cpp  memops_test.cpp
core/tests/strings/: strings_test.cpp
core/tests/system/: hardware_info_test.cpp  language_test.cpp
core/tests/threads/: atomics_test.cpp  condvar_test.cpp  mutex_test.cpp  rwlock_test.cpp  spinlock_test.cpp  thread_group_test.cpp  thread_test.cpp
core/tests/utils/: compress_test.cpp  log_state_test.cpp
core/tests/windowing/: monitor_test.cpp  window_test.cpp
include/: based.h
include/basic/: assert.h  codespace.h  entry.h  env_defines.h  keyword_defines.h  log.h  primitive_types.h  profiler.h  utility_defines.h
include/containers/: binary_tree.h  bitset.h  doubly_list.h  hash_map.h  ring_list.h  singly_list.h  stack_list.h  tree.h
include/context/: ctx.h  global_ctx.h  thread_ctx.h
include/filesystem/: archive.h  directory.h  file.h  file_map.h  file_stream.h  filewatch.h  info.h  module.h  path.h  pathwatch.h
include/input/: bindings.h  camera.h  capture.h  clipboard.h  devices.h  gamepads.h  keyboard.h  mouse.h  msg.h  msg_core.h  msg_def.h  sensor.h  tablet.h
include/memory/: allocator.h  arena.h  buffer.h  heap.h  pool.h  ring.h  vmem.h
include/processes/: process.h
include/strings/: char.h  cstrings.h  strings.h  unicode.h
include/threads/: atomics.h  condvar.h  mutex.h  rwlock.h  semaphore.h  spinlock.h  thread.h  thread_ctx.h  thread_current.h  thread_group.h
include/utils/: cmdline.h  uuid.h
include/windowing/: display.h  window.h
modules/core/: AGENTS.md  CMakeLists.txt  api_index.txt
modules/gfx/: AGENTS.md  CMakeLists.txt  api_index.txt
modules/gfx/include/: based_gfx.h
modules/gfx/include/gfx/: module.h
modules/gfx/src/gfx/: module.c
modules/gfx/tests/: test_common.hpp  test_main.cpp
modules/gfx/tests/gfx/: module_test.cpp
src/: based.c
src/basic/: assert.c  entry.c  intrinsics.c  log.c
src/containers/: hash_map.c  sort.c
src/context/: ctx.c  global_ctx.c  thread_ctx.c
src/filesystem/: archive.c  directory.c  file.c  file_map.c  file_stream.c  filemap.c  filestream.c  filewatch.c  info.c  module.c  path.c  pathinfo.c  pathwatch.c
src/input/: bindings.c  camera.c  capture.c  clipboard.c  devices.c  gamepads.c  input_state.c  keyboard.c  mouse.c  msg.c  sensor.c  tablet.c  touch.c
src/memory/: allocator.c  arena.c  buffer.c  heap.c  pool.c  ring.c  scratch.c  vmem.c
src/processes/: pipe.c  process.c  process_current.c
src/strings/: char.c  cstrings.c  strings.c  unicode.c
src/system/: cpu_info.c  system_info.c  system_runtime.c
src/threads/: atomics.c  condvar.c  mutex.c  rwlock.c  semaphore.c  spinlock.c  thread.c  thread_ctx.c  thread_current.c  thread_group.c
src/utils/: cmdline.c  crc.c  (+6 more)
tests/: test_based.cpp  test_common.hpp  test_main.cpp  test_path.cpp
(+224 files in other folders)
